--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
-p {
-text-align: center
+body{
+background: #CCCCCC
+}
+
+h1{
 
 }
 
+p {
+text-align: center
+  
+}
+
+#missao{
+font-size: 20px
+}
+
+em strong{
+  color: red;
+}
